--- a/Arduino_Accelerometer_and_Gyro_Data_Analysis_Using_Python.ipynb
+++ b/Arduino_Accelerometer_and_Gyro_Data_Analysis_Using_Python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOZUtLEvYyasFLz2qYMuchw",
+      "authorship_tag": "ABX9TyPD7L/Uk37nl1PhnCePPa+J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "\n",
         "# Import data\n",
         "drive.mount('/content/gdrive')\n",
-        "df=pd.read_csv('/content/gdrive/MyDrive/🏀 General/⚾ MWNH/Intelijug/Jug Data 2.csv')\n",
+        "df=pd.read_csv('/content/gdrive/MyDrive/🏀 General/⚾ MWNH/Medical Device/Device Data.csv')\n",
         "\n",
         "# Constants\n",
         "gravity = 9.81\n",
@@ -57,7 +57,7 @@
         "id": "b1faAFfoAwhR",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 322
+          "height": 224
         },
         "outputId": "4db2d4a9-fcb2-4532-b29b-5fb19e795cb9"
       },
@@ -341,7 +341,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 305
+          "height": 206
         },
         "id": "DQ-5-aODlj39",
         "outputId": "109ae3df-be00-40f6-89d2-a9f1f945e5d2"
@@ -597,7 +597,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 305
+          "height": 268
         },
         "id": "ZZxWdYTYmqGe",
         "outputId": "12aa85e3-86a7-4d57-e470-87064ea744ad"
@@ -878,7 +878,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 305
+          "height": 285
         },
         "id": "EDi1j5J_7WfS",
         "outputId": "0772c0f7-f231-4966-a2c2-74394827a4ae"
@@ -1196,7 +1196,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 998
         },
         "id": "bU87v_LWssmn",
         "outputId": "6ae5fda6-b0f8-4d34-af8e-3f47e8b9c344"
